# ckanext-lighthorse

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/lighthorse/: dataset_schema.yaml  plugin.py
ckanext/lighthorse/assets/: script.js  webassets.yml
ckanext/lighthorse/templates/: header.html
ckanext/lighthorse/templates/home/: layout3.html
ckanext/lighthorse/templates/scheming/form_snippets/: url_bucket.html
ckanext/lighthorse/tests/: test_plugin.py
