[metadata]
name = ckanext-lighthorse
version = 0.0.1
description = main CKAN theme
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keitaroinc/ckanext-lighthorse
author = Blagoja Bozhinovski
author_email = blagoja.bozinovski@keitaro.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN main theme

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             lighthorse = ckanext.lighthorse.plugin:LighthorsePlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/lighthorse/i18n/ckanext-lighthorse.pot
width = 80

[init_catalog]
domain = ckanext-lighthorse
input_file = ckanext/lighthorse/i18n/ckanext-lighthorse.pot
output_dir = ckanext/lighthorse/i18n

[update_catalog]
domain = ckanext-lighthorse
input_file = ckanext/lighthorse/i18n/ckanext-lighthorse.pot
output_dir = ckanext/lighthorse/i18n
previous = true

[compile_catalog]
domain = ckanext-lighthorse
directory = ckanext/lighthorse/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
